--- a/test/fixtures/opinions.yml
+++ b/test/fixtures/opinions.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: MyString
+  text: MyText
 
 two:
-  text: MyString
+  text: MyText
